--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -79,7 +79,7 @@
   </div>
 </section>
 
-{% if isLastRender %}
+{% if isCuralinRender %}
   <style>
     #supplement-page section.pack-info-section .titles {
       flex-direction: revert;
