--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -16,7 +16,7 @@
       </nav>
 
       <div class="content">
-        <div id="highlights-{{ index }}" class="item active always-active" data-title="Product Highlights">
+        <div id="highlights-{{ index }}" class="item active always-active" data-title="Benefits/Description">
           <div class="highlights item-content">
             {% for highlight in product.metafields.custom.product-highlights.value %}
               <div class="highlight">
