--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -6,7 +6,6 @@
     <div class="tabbed-content tabs-side">
       <nav class="tabs">
         <ul>
-          
           <li><a href="#highlights-{{ index }}" class="active">Benefits/Description <i>></i></a></li>
           <li><a href="#instructions-{{ index }}">Usage Instructions <i>></i></a></li>
           {% if product.metafields.custom.ingredients.value %}
@@ -19,12 +18,12 @@
       <div class="content">
         <div id="highlights-{{ index }}" class="item active always-active" data-title="Benefits/Description">
           <div class="highlights item-content">
-           {% for benefit in product.metafields.custom.benefits_images.value %}
-             <div class="health-benefit">
-               <img src="{{ benefit.src | image_url }}" alt="health benefit" loading="lazy">
-               <p>{{ benefit.alt }}</p>
-             </div>
-           {% endfor %}
+          {% for benefit in product.metafields.custom.benefits_images.value %}
+            <div class="highlight">
+              <img src="{{ benefit.src | image_url }}" alt="health benefit" loading="lazy">
+              <p>{{ benefit.alt }}</p>
+            </div>
+          {% endfor %}
           </div>
         </div>
 
