--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -135,6 +135,7 @@
 
     .pack-info-section .health-benefits .health-benefit {
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
     }
 
