--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -140,6 +140,10 @@
       gap: 20px;
     }
 
+    .pack-info-section .health-benefits .health-benefit > div {
+      flex: 50%;
+    } 
+
 
     .pack-info-section .health-benefit-icon {
       background: var(--light-green);
