--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -142,7 +142,7 @@
     }
 
     .pack-info-section .health-benefits .health-benefit .benefit-wrapper {
-      flex: 50%;
+      width: 50%;
     } 
 
 
