--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -286,6 +286,10 @@
     }
 
     @media all and (min-width: 800px) {
+
+      .pack-info-section .health-benefits {
+          justify-content: center;
+        }
       .item.active .item-content {
         padding-top: 0;
       }
