--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -22,7 +22,7 @@ try.”*Jeff Ogden
           {% if product.metafields.custom.ingredients.value %}
             <li><a href="#ingredients-{{ index }}">Ingredients <i>></i></a></li>
           {% endif %}
-          <li><a href="#facts-{{ index }}">Supplement Facts <i>></i></a></li>
+          <li><a href="#facts-{{ index }}">Reviews <i>></i></a></li>
         </ul>
       </nav>
 
