--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -148,7 +148,7 @@ try.”*Jeff Ogden
     .pack-info-section .health-benefits .health-benefit {
       display: flex;
       align-items: center;
-      gap: 20px;
+      width: 40%;
     }
 
 
