--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -149,6 +149,8 @@ try.”*Jeff Ogden
       display: flex;
       align-items: center;
       width: 40%;
+      margin: auto;
+      gap: 20px;
     }
 
 
