--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -404,6 +404,12 @@ try.”*Jeff Ogden
         min-width: 20vw;
       }
     }
+
+    @media screen and (max-width: 500px) {
+      .pack-info-section .health-benefits .health-benefit p {
+        font-size: 4vw;
+      }
+    }
   </style>
 {% endif %}
 
