--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -406,8 +406,11 @@ try.”*Jeff Ogden
     }
 
     @media screen and (max-width: 500px) {
+      .pack-info-section .health-benefits .health-benefit {
+        gap: 2vw;
+      }
       .pack-info-section .health-benefits .health-benefit p {
-        font-size: 4vw;
+        font-size: 2.5vw;
       }
     }
   </style>
