--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -1,10 +1,12 @@
 
 <div class="container">
   <div class="mini-wrap">
-    <div class="changing-experiences">    
+    <div class="changing-experiences">
+      {% unless onlyData %}
       <div class="sub-title">
         <h3>Life Changing Experiences</h3>
       </div>
+     {% endunless %}
       <div class="quote-slider">
         <div class="swiper">
           <div class="swiper-wrapper">
