--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -31,8 +31,8 @@
             {% endfor %}
           </div>
           <div class="slider-control">
-            <div class="prev-slide"><span class="icon-arrow"></span></div>
-            <div class="next-slide"><span class="icon-arrow"></span></div>
+            <div class="prev-slide2"><span class="icon-arrow"></span></div>
+            <div class="next-slide2"><span class="icon-arrow"></span></div>
           </div>
         </div>
       </div>
