--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -40,7 +40,12 @@
   </div>
 </div> 
 
-
+<style>
+  .quote-card .quote-info .quote-rating p span {
+   
+    color: var(--light-green);
+  }
+</style>
 
 
  <script>
