--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -49,6 +49,10 @@
   .quote-slider .prev-slide2 {
     background: unset;
   }
+
+  .quote-slider .next-slide2 {
+    background: unset;
+  }
 </style>
 
 
