--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -53,7 +53,7 @@
         </div>
 
         <div class="description">
-          {% render 'price' %}
+          {% render 'price', product: product, item_price: item_price, quantity: quantity, original_item_cap: original_item_cap %}
 
           <p class="promotion-title">Bonus: {{ promotion_title }} ({{ bundle_addition | money_with_currency | replace: ".00", "" | replace: "GBP", "" }} Value)</p>
 
