--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -11,7 +11,7 @@
               <div class="quote-card">
               <div class="quote-info">
                 <div class="quote-author">
-                  <p>{{ experience | split: "*" | last }}</p>
+                  <h2>{{ experience | split: "*" | last }}</h2>
                 </div>
                 <div class="quote-rating">
                   <p>
