--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -23,7 +23,7 @@
                   </p>
                 </div>
               </div>
-                  <p>{{ experience | split: "*" | first }}</p>
+                  <p class="quoted-text">{{ experience | split: "*" | first }}</p>
              
               
               </div>
@@ -52,6 +52,17 @@
 
   .quote-slider .next-slide2 {
     background: unset;
+  }
+
+  .quoted-text {
+    font-family: 'DM Sans';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #424733;
+
+
   }
 </style>
 
