--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -61,9 +61,15 @@
     font-size: 18px;
     line-height: 24px;
     color: #424733;
-
-
   }
+
+@media screen and (max-width: 629px) {
+  .quoted-text {
+    font-size: 3vw;
+    line-height: unset;        
+  }
+}
+
 </style>
 
 
