--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -41,6 +41,9 @@
 </div> 
 
 <style>
+  .quote-card {
+    background: #E8E8B0;
+  }
   .quote-card .quote-info .quote-rating p span {
    
     color: var(--light-green);
