--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -84,8 +84,8 @@
     autoHeight: true,
     loop: true,
     navigation: {
-      nextEl: ".next-slide",
-      prevEl: ".prev-slide",
+      nextEl: ".next-slide2",
+      prevEl: ".prev-slide2",
       disabledClass: 'disabled'
     },
     breakpoints: {
