--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -53,8 +53,18 @@
     background: unset;
   }
 
+  .quote-slider .prev-slide2:hover {
+    background: unset;
+  }
+
+
   .quote-slider .next-slide2 {
     background: unset;
+  }
+
+  .quote-slider .next-slide2:hover {
+    background: unset;
+   
   }
 
   .quoted-text {
