--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -1,15 +1,10 @@
-{% assign experienses = '“Outstanding product and results. I cannot thank you enough for making
-this
-possible.”*Michael Edwards
-|“CuraLin has worked exceptionally well for me! Thank you CuraLin for
-helping
-me help
-myself feel better naturally. Definitely 5 stars!”*Colin Reader
-|“It started with my manager now 4 of us are on it. My doctor said give it
-a
-try.”*Jeff Ogden
+{% assign experienses = "“Curalife has kept my sugar within normal ranges even after I eat things that I probably shouldn't!”*Alon M.
+|“This is the greatest! My husband started taking this! Finally found a product that works! “*Linda V.
+|“I have tried so many different supplements with no results. This one is amazing and i am excited. I just purchased my second bottle.”*Michael Murillo Sr.
+|“It is so wonderful to find something that really works. I feel so much better!!”*Leanne A.
+|“Have been taking CuraLin over the last four months and am beyond pleased with the results.”*Michael E.
 
-' | split: '|' %}
+" | split: '|' %}
 
 <section class="pack-info-section instance-{{ index }}">
   <div class="container">
