--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -42,7 +42,7 @@
 
 <style>
   .quote-card {
-    background: #E8E8B0;
+    background: rgba(232,	232,	176, .2);
   }
   .quote-card .quote-info .quote-rating p span {
    
