--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -88,7 +88,7 @@
 
  <script>
   quoteSlider = new Swiper(".quote-slider .swiper", {
-    slidesPerView: 3,
+    slidesPerView: 'auto',
     spaceBetween: 0,
     grabCursor: true,
     autoHeight: true,
