--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -15,6 +15,13 @@
   {% assign isCuralinNew = true %}
 {% endif %}
 
+{% assign doctors = 'lp-aio-michel.png*Dr. Michael Binder:Functional doctor, author of Cracking The Diabetic Code.
+|lp-aio-nancy.png*Dr. Nancy Russell:Internal Medicine Specialist, North Kansas City Hospital
+|lp-aio-raz.png*Prof. Itamar Raz:World renouned diabetes expert with over 400 published peer-reviewed studies.
+|lp-aio-sarah.png*Dr. Sarah Brewer:Functional doctor, diabetes expert, and author of over 60 books on personal
+health.
+' | split: '|' %}
+
 <div id="supplement-page">
   {% if isCuralinNew %}
   {% render 'product-all-in-one-cta-section', newCuralinTitle: true, ctaTextType: "total",  isCuralinContent: isCuralinBundled, title: "Select Your Deal:", badgesPosition: "cta", badgesContent: "free-shipping,money-back" isHighlightSubtitle: true, isReversed: true, ctaColor: "var(--orange)", bottomLineColor: "var(--light-green)", defaultSelectionIndex: 2, isPricePerUnit: true, isReviews: true %}
@@ -55,6 +62,10 @@
   {% if isCuralinBundled %}
     {% render 'product-supplement-doctors-section' %}
   {% endif %}
+  {% if isCuralinNew %}
+    {% render 'aio-first-page-trusted-doctors' %}
+  {% endif %}
+  
 
   {% render 'onboarding-curalin-call-expert', background_color: '#FAF5E9', border: false, isHideImageOnMobile: true %}
   {% render 'product-faq-section', bgColor: "var(--lighter-green)" %}
