--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -63,7 +63,7 @@ health.
     {% render 'product-supplement-doctors-section' %}
   {% endif %}
   {% if isCuralinNew %}
-    {% render 'aio-first-page-trusted-doctors' %}
+    {% render 'aio-first-page-trusted-doctors', doctors: doctors %}
   {% endif %}
   
 
