--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -19,8 +19,9 @@
 |lp-aio-nancy.png*Dr. Nancy Russell:Internal Medicine Specialist, North Kansas City Hospital
 |lp-aio-raz.png*Prof. Itamar Raz:World renouned diabetes expert with over 400 published peer-reviewed studies.
 |lp-aio-sarah.png*Dr. Sarah Brewer:Functional doctor, diabetes expert, and author of over 60 books on personal
-health.
-' | split: '|' %}
+health.'
+| split: '|' %}
+
 
 <div id="supplement-page">
   {% if isCuralinNew %}
