--- a/templates/product.supplement.liquid
+++ b/templates/product.supplement.liquid
@@ -64,7 +64,7 @@ health.'
     {% render 'product-supplement-doctors-section' %}
   {% endif %}
   {% if isCuralinNew %}
-    {% render 'aio-first-page-trusted-doctors', doctors: doctors %}
+    {% render 'aio-first-page-trusted-doctors', doctors: doctors, noDescription: true %}
   {% endif %}
   
 
