--- a/snippets/curalin-pack-new-results.liquid
+++ b/snippets/curalin-pack-new-results.liquid
@@ -1,14 +1,14 @@
-<div class="commitement-for-you">
+<div class="curalin-new-for-you">
   <div class="container">
 
-    <div class="commitement-for-you-wrapper">
+    <div class="curalin-new-for-you-wrapper">
       
       <div class="sub-title">
         <h3><b>Celebrate your commitment!</b></h3>
-        <img class="commit-img-mb" src="{{ 'thirty-day-commit-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
+        <img class="curalin-new-img-mb" src="{{ 'thirty-day-curalin-new-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
       </div>
-      <div class="commit-sub-wrapper">
-      <img class="commit-img" src="{{ 'thirty-day-commit-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
+      <div class="curalin-new-sub-wrapper">
+      <img class="curalin-new-img" src="{{ 'thirty-day-curalin-new-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
       <div class="commitement-text">
         When you finish the 30 days, you’ll be entered into a raffle to win <b>a $200 Amazon Gift Card</b>  as a bonus! Buy something good for your health!
       </div>
@@ -37,12 +37,12 @@
 </div>
 
 <style>
-  .commitement-for-you {
+  .curalin-new-for-you {
     background: #fff1e8;
     
   }
 
-  .commitement-for-you-wrapper .sub-title {
+  .curalin-new-for-you-wrapper .sub-title {
     display:flex;
     justify-content: center;
     padding-top: 60px;
@@ -50,7 +50,7 @@
     padding-bottom: 30px;
   }
 
-  .commitement-for-you-wrapper .sub-title h3 {
+  .curalin-new-for-you-wrapper .sub-title h3 {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: clamp(34px, 5vw, 60px);
@@ -58,30 +58,30 @@
     color: var(--dark-green);
   }
 
-  .commitement-for-you-wrapper {
+  .curalin-new-for-you-wrapper {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
   }
 
-  .commit-sub-wrapper {
+  .curalin-new-sub-wrapper {
     display: flex;
     max-width: 69%;
     margin: 0 auto;
     padding-bottom: 30px;
   }
 
-  .commit-sub-wrapper .commit-img {
+  .curalin-new-sub-wrapper .curalin-new-img {
     max-width: 31%;
     object-fit: contain;
   }
 
-  .sub-title .commit-img-mb {
+  .sub-title .curalin-new-img-mb {
     display: none;
   }
 
 
-  .commit-sub-wrapper .commitement-text {
+  .curalin-new-sub-wrapper .commitement-text {
     font-family: 'DM Sans';
     font-weight: 400;
     font-size: clamp(16px, 2vw, 20px);
@@ -90,7 +90,7 @@
   }
 
   .commitment-we-proud {
-    background-image: url("{{ 'thirty-day-commit-swoosh.png' | asset_url }}");
+    background-image: url("{{ 'thirty-day-curalin-new-swoosh.png' | asset_url }}");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -174,31 +174,31 @@
     .commitments .commitment {
       max-width: unset;
     }
-    .commitement-for-you-wrapper {
+    .curalin-new-for-you-wrapper {
       padding-bottom: unset;
       width: 100%;
     }
-    .commit-sub-wrapper {
+    .curalin-new-sub-wrapper {
       max-width: unset;
     }
 
 
 
-    .commitement-for-you-wrapper .sub-title {
+    .curalin-new-for-you-wrapper .sub-title {
       justify-content: space-between;
     }
 
-    .commit-sub-wrapper .commit-img {
+    .curalin-new-sub-wrapper .curalin-new-img {
       display: none;
     }
 
-    .sub-title .commit-img-mb {
+    .sub-title .curalin-new-img-mb {
       display: inline-block;
       object-fit: contain;
       max-width: 35%;
     }
 
-    .commitement-for-you-wrapper .sub-title h3 {
+    .curalin-new-for-you-wrapper .sub-title h3 {
       text-align: left;
       font-size: clamp(29px, 2vw, 32px);
       line-height: 35px;
