--- a/snippets/curalin-pack-new-results.liquid
+++ b/snippets/curalin-pack-new-results.liquid
@@ -4,13 +4,13 @@
     <div class="curalin-new-for-you-wrapper">
       
       <div class="sub-title">
-        <h3><b>Celebrate your commitment!</b></h3>
-        <img class="curalin-new-img-mb" src="{{ 'thirty-day-curalin-new-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
+        <h3><b>Real people. Real results</b></h3>
+       
       </div>
       <div class="curalin-new-sub-wrapper">
-      <img class="curalin-new-img" src="{{ 'thirty-day-curalin-new-gift-card.png' | asset_url }}" width="368" height="253" alt="gift-card" loading="lazy"> 
+      <img class="curalin-new-img" src="{{ 'curalin-new-satisfied-1.png' | asset_url }}" width="228" height="228" alt="gift-card" loading="lazy"> 
       <div class="commitement-text">
-        When you finish the 30 days, you’ll be entered into a raffle to win <b>a $200 Amazon Gift Card</b>  as a bonus! Buy something good for your health!
+        <img class="curalin-new-img" src="{{ 'curalin-new-satisfied-2.png' | asset_url }}" width="228" height="228" alt="gift-card" loading="lazy"> 
       </div>
       </div>
     </div>
