--- a/snippets/curalin-pack-new-results.liquid
+++ b/snippets/curalin-pack-new-results.liquid
@@ -100,6 +100,7 @@
  .commitments .commitment {
     position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
     padding: 15px 0;
     font-family: "PP Radio Grotesk";
