--- a/snippets/curalin-pack-new-results.liquid
+++ b/snippets/curalin-pack-new-results.liquid
@@ -14,12 +14,12 @@
     
       {% assign commitments = "curalin-new-satisfied-1.png*Are satisfied with Curalin
        
-        |curalin-new-satisfied-1.png*Feel safe using Curalin" | split: "|" %}
+        |curalin-new-satisfied-2.png*Feel safe using Curalin" | split: "|" %}
 
       <div class="commitments">
         {% for commitment in commitments %}
           <div class="commitment">        
-            <div class="curalin-new-text">{{ commitment | asset_url | split: "*" | first }}</div>
+            <img src="{{ commitment | asset_url | split: "*" | first }}" width="228" height="228" alt="">
             <div class="curalin-new-text">{{ commitment | split: "*" | last }}</div>
           </div>
         {% endfor %}
