--- a/snippets/curalin-pack-new-results.liquid
+++ b/snippets/curalin-pack-new-results.liquid
@@ -57,29 +57,7 @@
   }
 
 
-  .curalin-new-we-proud {
-    background-image: url("{{ 'thirty-day-curalin-new-swoosh.png' | asset_url }}");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    font-family: 'PP Radio Grotesk';
-    font-weight: 700;
-    font-size: clamp(32px, 2vw, 40px);
-    line-height: 62px;  
-    text-align: center;
-    letter-spacing: -0.02em;
-    color: var(--dark-green);
-  }
 
-  .curalin-new-have-to-do {
-    font-family: 'PP Radio Grotesk';
-    font-weight: 700;
-    font-size: 30px;
-    line-height: 28px; 
-    text-align: center;
-    color: var(--dark-green);
-    padding: 20px 0;
-  }
 
 
    .curalin-new-wrapper {
@@ -93,7 +71,7 @@
   .commitments {
     display: flex;
     padding-bottom: 30px;
-    justify-content: center;
+    gap: 20px;
   }
 
  .commitments .commitment {
