--- a/snippets/curalin-pack-new-results.liquid
+++ b/snippets/curalin-pack-new-results.liquid
@@ -94,7 +94,8 @@
 
    .commitments .commitment .curalin-new-text {
     font-family: 'DM Sans';
-    font-weight: 400;
+    text-align: center;
+    font-weight: 700;
     font-size: clamp(20px,2vw, 25px);
     line-height: 30px;
     color: var(--dark-green);
