--- a/snippets/curalin-pack-new-results.liquid
+++ b/snippets/curalin-pack-new-results.liquid
@@ -96,9 +96,9 @@
     font-family: 'DM Sans';
     text-align: center;
     font-weight: 700;
-    font-size: clamp(20px,2vw, 25px);
-    line-height: 30px;
-    color: var(--dark-green);
+    font-size: clamp(20px,2vw, 32px);
+    line-height: 35px;
+    color:  #404733;
    
   }
 
@@ -141,7 +141,6 @@
     }
 
      .commitments .commitment .curalin-new-text {
-      max-width: unset;
       line-height: 24px;   
     }
   }
