--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -82,6 +82,10 @@
 
 {% if isCuralinRender %}
   <style>
+
+  .content {
+    max-width: 100%;
+  }
     #supplement-page section.pack-info-section .titles {
       flex-direction: revert;
       justify-content: start;
