--- a/snippets/curalin-pack-info.liquid
+++ b/snippets/curalin-pack-info.liquid
@@ -298,6 +298,10 @@
 
     @media all and (min-width: 1130px) {
 
+    .pack-info-section .tabbed-content {
+      max-width: unset;
+    }
+
       .pack-info-section .health-benefits {
           justify-content: center;
         }
