--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -43,6 +43,7 @@
 <style>
   .quote-card {
     background: unset;
+    box-shadow: unset;
   }
   .quote-card .quote-info .quote-rating p span {
    
