--- a/snippets/curalin-pack-changing-experience.liquid
+++ b/snippets/curalin-pack-changing-experience.liquid
@@ -45,6 +45,10 @@
     background: unset;
     box-shadow: unset;
   }
+
+  .quote-slider .slider-control {
+    justify-content: space-between;
+  }
   .quote-card .quote-info .quote-rating p span {
    
     color: var(--light-green);
